# 8-Disciplines

./: .env.example  README.md  acme_customer_feedback.py  pyproject.toml  reportgenerator.py  survey_tools.py
src/eight_disciplines/: __init__.py  acme_customer_feedback.py  reportgenerator.py  survey_tools.py
tests/: test_feedback_logging.py  test_missingness.py  test_prompts.py  test_workflow_gating.py
